--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "firebase": "^10.12.2",
     "mongodb": "^5.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2"
